--- a/infinispan-remote/pom.xml
+++ b/infinispan-remote/pom.xml
@@ -28,6 +28,7 @@
         <enforcer.dependencyconvergence.skip>true</enforcer.dependencyconvergence.skip>
         <infinispan-server.name>infinispan-server</infinispan-server.name>
         <infinispan-server.home>${project.build.directory}/${infinispan-server.name}</infinispan-server.home>
+        <version.wildfly-core>6.0.2.Final</version.wildfly-core>
     </properties>
 
     <dependencies>
@@ -170,19 +171,19 @@
         <dependency>
             <groupId>org.wildfly.core</groupId>
             <artifactId>wildfly-controller-client</artifactId>
-            <version>2.0.10.Final</version>
+            <version>${version.wildfly-core}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.wildfly.core</groupId>
             <artifactId>wildfly-launcher</artifactId>
-            <version>2.0.10.Final</version>
+            <version>${version.wildfly-core}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.wildfly.core</groupId>
             <artifactId>wildfly-controller</artifactId>
-            <version>2.0.10.Final</version>
+            <version>${version.wildfly-core}</version>
             <scope>test</scope>
         </dependency>
 
@@ -190,11 +191,6 @@
             <groupId>org.jboss.narayana.jta</groupId>
             <artifactId>narayana-jta</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.spec.javax.transaction</groupId>
-            <artifactId>jboss-transaction-api_1.2_spec</artifactId>
-            <scope>provided</scope>
         </dependency>
         <!-- Infinispan uses XA transactions so the JTA package isn't enough -->
         <dependency>
@@ -217,6 +213,7 @@
                         </goals>
                         <phase>compile</phase>
                         <configuration>
+                            <config-dir>${project.basedir}</config-dir>
                             <config-file>infinispan-server-provisioning.xml</config-file>
                             <server-name>${infinispan-server.name}</server-name>
                         </configuration>
@@ -239,7 +236,7 @@
                         <overwrite>true</overwrite>
                         <resources>
                           <resource>
-                            <directory>${basedir}/infinispan-server-testconfig</directory>
+                            <directory>${project.basedir}/infinispan-server-testconfig</directory>
                           </resource>
                         </resources>
                     </configuration>
